--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,8 @@ jobs:
           name: validate version
           command: agilekit git validate
       - run:
-          name: install
-          command: sudo python setup.py install sdist bdist_wheel
+          name: build bundles
+          command: sudo python setup.py sdist bdist_wheel
       - run:
           name: upload release
           command: twine upload dist/* --username lsbardel --password $PYPI_PASSWORD
