--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,8 @@
 [run]
 source = openapi
-omit = openapi/reload.py
+omit =
+    openapi/reload.py
+    openapi/db/openapi
 
 [html]
 directory = build/coverage/html
