--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,9 @@
             "env": {},
             "debugOptions": [
                 "RedirectOutput"
+            ],
+            "args": [
+                "tests/spec/test_spec.py"
             ]
         }
     ]
