--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "RedirectOutput"
             ],
             "args": [
-                "tests/data/test_validator.py"
+                "tests/test_dc_db.py"
             ]
         }
     ]
