--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
 [flake8]
 exclude = __pycache__,.eggs,venv,build,dist
 max-line-length = 88
+
+[isort]
+line-length = 88
+skip=venv
+known_standard_library=dataclasses
+multi_line_output=3
