--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,12 @@ line-length = 88
 skip=venv
 known_standard_library=dataclasses
 multi_line_output=3
+
+[mypy]
+python_version = 3.7
+plugins = sqlmypy
+ignore_missing_imports=True
+disallow_untyped_calls=False
+warn_return_any=False
+# disallow_untyped_defs=True
+warn_no_return=True
