Add python 3.8 support and CI in github

--- a/.coveragerc
+++ b/.coveragerc
@@ -7,6 +7,9 @@ omit =
 [html]
 directory = build/coverage/html
 
+[xml]
+output = build/coverage.xml
+
 [report]
 exclude_lines =
     pragma: no cover
