--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: build
 
-on: push
+on:
+  push:
+    branches-ignore:
+      - deploy
+    tags-ignore:
+      - v*
 
 jobs:
 
@@ -41,6 +46,7 @@ jobs:
     env:
       PYTHON_ENV: ci
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
     steps:
     - uses: actions/checkout@v1
@@ -56,4 +62,5 @@ jobs:
       run: make test-py38
     - name: upload coverage
       run: make test-codecov
-
+    - name: upload coveralls
+      run: make test-coveralls
