Better typing support

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "RedirectOutput"
             ],
             "args": [
-                "tests/test_filters.py"
+                "tests/test_db.py"
             ]
         }
     ]
