--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [flake8]
-exclude = __pycache__,.eggs,venv,build,dist
+exclude = __pycache__,.eggs,venv,build,dist,docs
 max-line-length = 88
 
 [isort]
 line-length = 88
-skip=venv
+skip=venv docs
 known_standard_library=dataclasses
 multi_line_output=3
 
