--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "python.pythonPath": "${workspaceFolder}/venv/bin/python",
-    "python.linting.pylintEnabled": false,
-    "python.linting.flake8Enabled": true,
-    "[yaml]": {
-        "editor.tabSize": 2
-    }
+  "python.pythonPath": "${workspaceFolder}/venv/bin/python"
 }
