--- a/dev/requirements-dev.txt
+++ b/dev/requirements-dev.txt
@@ -20,3 +20,12 @@ sqlalchemy-stubs
 # additional features
 colorlog
 raven-aiohttp
+#
+# docs
+sphinx
+sphinx-copybutton
+sphinx-autodoc-typehints
+sphinxcontrib-asyncio
+aiohttp-theme
+recommonmark
+sphinxcontrib-blockdiag
