--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,14 @@ disallow_untyped_calls=False
 warn_return_any=False
 # disallow_untyped_defs=True
 warn_no_return=True
+
+[tool:pytest]
+testpaths = tests
+filterwarnings= default
+                ignore:::.*raven_aiohttp.*
+                ignore:::.*asynctest.*
+                ignore:::.*aioconsole.*
+                ignore:::.*aiohttp.*
+                ignore:::.*mockaioredis.*
+                ignore:This message has already been written once.*:UserWarning
+                ignore:numpy.dtype size changed, may indicate binary incompatibility:RuntimeWarning
