readthe docs integration

--- a/dev/requirements-dev.txt
+++ b/dev/requirements-dev.txt
@@ -1,31 +1,12 @@
-# devs
-flake8
-black
-codecov
-coverage
-coveralls
-mypy
-isort
-pytest
-pytest-cov
-pytest-aiohttp
-pytest-mock
-twine
-agile-toolkit
-asynctest
+# additional aio libs
+cchardet
+aiodns
 #
-# stubs
-sqlalchemy-stubs
+pyjwt
+phonenumbers
+#
 #
 # additional features
 colorlog
-raven-aiohttp
 #
-# docs
-sphinx
-sphinx-copybutton
-sphinx-autodoc-typehints
-sphinxcontrib-asyncio
-aiohttp-theme
-recommonmark
-sphinxcontrib-blockdiag
+python-dotenv
