--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -6,8 +6,6 @@ ENV GITHUB_USERNAME=qmbot
 
 WORKDIR /workspace
 
-COPY ./dev/requirements-dev.txt ./dev/requirements-dev.txt
-COPY ./dev/requirements.txt ./dev/requirements.txt
-COPY ./dev/install.sh ./dev/install.sh
-RUN ./dev/install.sh
+COPY ./dev ./dev
+RUN ./dev/install-test
 COPY . .
