--- a/setup.cfg
+++ b/setup.cfg
@@ -4,10 +4,10 @@ max-line-length = 88
 ignore = A001,A002,A003,C815,C812,W503,E203
 
 [isort]
-line-length = 88
-skip=venv docs
-known_standard_library=dataclasses
+line_length=88
+src_paths=openapi,tests
 multi_line_output=3
+include_trailing_comma=True
 
 [mypy]
 python_version = 3.7
