--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
       run: make test
     - name: upload coverage
       if: matrix.python-version == '3.8'
-      run: make test-coveralls
+      run: coveralls
