--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,39 +8,32 @@ on:
       - v*
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    env:
-      PYTHON_ENV: ci
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: run postgres
-        run: make postgresql
-      - name: build image
-        run: make py38
-      - name: validate version
-        run: make test-version
-      - name: run flake8
-        run: make test-flake8
-      - name: run black
-        run: make test-black
-      - name: run tests
-        run: make test-py38
-
   release:
     runs-on: ubuntu-latest
-    needs:
-      - test
     env:
       PYTHON_ENV: ci
       PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      GITHUB_TOKEN: ${{ secrets.QMBOT_GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v2
-      - name: build python 3.8 image
-        run: make py38
-      - name: build python 3.8 bundle
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: run postgres
+        run: make postgresql
+      - name: Install dependencies
+        run: make install
+      - name: test version
+        run: make test-version
+      - name: lint
+        run: make test-lint
+      - name: run tests
+        run: make test
+      - name: build python bundle
         run: make bundle
-      - name: release to pypi and github tag
-        run: make release
+      - name: release to pypi
+        run: make release-pypi
+      - name: release to github
+        run: make release-github
