--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,26 +14,23 @@ jobs:
       PYTHON_ENV: ci
       PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       GITHUB_TOKEN: ${{ secrets.QMBOT_GITHUB_TOKEN }}
-
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
-      - name: run postgres
-        run: make postgresql
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: make install
       - name: test version
         run: make test-version
-      - name: lint
-        run: make test-lint
-      - name: run tests
-        run: make test
       - name: build python bundle
-        run: make bundle
+        run: "make bundle${{ matrix.python-version }}"
       - name: release to pypi
         run: make release-pypi
       - name: release to github
+        if: matrix.python-version == '3.8'
         run: make release-github
