ignore flake8 code B902

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 exclude = __pycache__,.eggs,venv,build,dist,docs,dev
 max-line-length = 88
-ignore = A001,A002,A003,C815,C812,W503,E203
+ignore = A001,A002,A003,B902,C815,C812,W503,E203
 
 [isort]
 line_length=88
