--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = __pycache__,.eggs,venv,build,dist,docs,dev
+exclude = __pycache__,.eggs,.venv,venv,build,dist,docs,dev
 max-line-length = 88
 ignore = A001,A002,A003,B902,C815,C812,W503,E203
 
