--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
       run: make test
     - name: upload coverage
       if: matrix.python-version == '3.10'
-      run: coveralls
+      run: make upload-coverage
