--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
       - v*
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     env:
@@ -17,22 +16,24 @@ jobs:
       COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: run postgres
-      run: make postgresql
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: make install
-    - name: run lint
-      run: make test-lint
-    - name: run tests
-      run: make test
-    - name: upload coverage
-      if: matrix.python-version == '3.10'
-      run: make upload-coverage
+      - uses: actions/checkout@v2
+      - name: run postgres
+        run: make postgresql
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: make install
+      - name: check version
+        run: make test-version
+      - name: run lint
+        run: make test-lint
+      - name: run tests
+        run: make test
+      - name: upload coverage
+        if: matrix.python-version == '3.10'
+        run: make upload-coverage
