--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,6 @@ jobs:
       - name: upload coverage
         if: matrix.python-version == '3.10'
         run: make upload-coverage
+      - name: publish
+        if: ${{ matrix.python-version == '3.10' && github.event.head_commit.message == 'release' }}
+        run: make publish
