--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,6 @@ sphinx-copybutton = {version = "^0.4.0", optional = true}
 sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
 aiohttp-theme = {version = "^0.1.6", optional = true}
 recommonmark = {version = "^0.7.1", optional = true}
-sphinxcontrib-blockdiag = {version = "^2.0.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 black = "^21.10b0"
@@ -84,7 +83,13 @@ isort = "^5.10.1"
 
 [tool.poetry.extras]
 dev = ["aiodns", "PyJWT", "colorlog", "phonenumbers", "cchardet"]
-docs = ["Sphinx"]
+docs = [
+    "Sphinx",
+    "recommonmark",
+    "aiohttp-theme",
+    "sphinx-copybutton",
+    "sphinx-autodoc-typehints",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
