--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,11 @@ jobs:
       - name: publish
         if: ${{ matrix.python-version == '3.10' && github.event.head_commit.message == 'release' }}
         run: make publish
+      - name: create github release
+        if: ${{ matrix.python-version == '3.10' && github.event.head_commit.message == 'release' }}
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "dist/*"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          draft: false
+          prerelease: steps.check-version.outputs.prerelease == 'true'
