--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aio-openapi"
-version = "2.5.2"
+version = "2.6.0"
 description = "Minimal OpenAPI asynchronous server application"
 documentation = "https://aio-openapi.readthedocs.io"
 repository = "https://github.com/quantmind/aio-openapi"
@@ -40,12 +40,11 @@ issues = "https://github.com/quantmind/aio-openapi/issues"
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
 aiohttp = "^3.8.0"
-uvloop = "^0.16.0"
 httptools = "^0.3.0"
 simplejson = "^3.17.5"
-asyncpg = "^0.24.0"
+asyncpg = "^0.25.0"
 SQLAlchemy = "^1.4.27"
-SQLAlchemy-Utils = "^0.37.9"
+SQLAlchemy-Utils = "^0.38.2"
 alembic = "psycopg2-binary"
 psycopg2-binary = "^2.9.2"
 click = "^8.0.3"
@@ -53,6 +52,7 @@ python-dateutil = "^2.8.2"
 email-validator = "^1.1.3"
 pytz = "^2021.3"
 PyYAML = "^6.0"
+uvloop = {version = "^0.16.0", optional = true}
 aiodns = {version = "^3.0.0", optional = true}
 PyJWT = {version = "^2.3.0", optional = true}
 colorlog = {version = "^6.6.0", optional = true}
@@ -74,7 +74,7 @@ flake8-commas = "^2.1.0"
 codecov = "^2.1.12"
 coverage = "^6.1.2"
 coveralls = "^3.3.1"
-mypy = "^0.910"
+mypy = "^0.930"
 sqlalchemy-stubs = "^0.4"
 sentry-sdk = "^1.4.3"
 python-dotenv = "^0.19.2"
