--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,9 @@ pytest-cov = "^3.0.0"
 pytest-aiohttp = "^0.3.0"
 pytest-mock = "^3.6.1"
 isort = "^5.10.1"
+types-pytz = "^2021.3.6"
+types-simplejson = "^3.17.5"
+types-python-dateutil = "^2.8.11"
 
 [tool.poetry.extras]
 dev = ["aiodns", "PyJWT", "colorlog", "phonenumbers", "cchardet"]
