--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ isort = "^5.10.1"
 types-pytz = "^2021.3.6"
 types-simplejson = "^3.17.5"
 types-python-dateutil = "^2.8.11"
+factory-boy = "^3.2.1"
 
 [tool.poetry.extras]
 dev = ["aiodns", "PyJWT", "colorlog", "phonenumbers", "cchardet"]
