--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
                 "RedirectOutput"
             ],
             "args": [
-                "tests/pagination/test_cursor_pagination.py"
+                "tests/pagination/test_cursor_pagination.py::test_direction_asc"
             ]
         }
     ]
