--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aio-openapi"
-version = "2.8.0"
+version = "2.9.0"
 description = "Minimal OpenAPI asynchronous server application"
 documentation = "https://aio-openapi.readthedocs.io"
 repository = "https://github.com/quantmind/aio-openapi"
@@ -50,7 +50,7 @@ psycopg2-binary = "^2.9.2"
 click = "^8.0.3"
 python-dateutil = "^2.8.2"
 email-validator = "^1.1.3"
-pytz = "^2021.3"
+pytz = "^2022.1"
 PyYAML = "^6.0"
 uvloop = {version = "^0.16.0", optional = true}
 aiodns = {version = "^3.0.0", optional = true}
@@ -65,22 +65,22 @@ aiohttp-theme = {version = "^0.1.6", optional = true}
 recommonmark = {version = "^0.7.1", optional = true}
 
 [tool.poetry.dev-dependencies]
-black = "^21.10b0"
+black = "^22.3.0"
 flake8 = "^4.0.1"
-pytest = "^6.2.5"
+pytest = "^7.1.1"
 flake8-blind-except = "^0.2.0"
 flake8-builtins = "^1.5.3"
 flake8-commas = "^2.1.0"
 codecov = "^2.1.12"
 coverage = "^6.1.2"
 coveralls = "^3.3.1"
-mypy = "^0.930"
+mypy = "^0.942"
 sqlalchemy-stubs = "^0.4"
 sentry-sdk = "^1.4.3"
-python-dotenv = "^0.19.2"
+python-dotenv = "^0.20.0"
 openapi-spec-validator = "^0.3.1"
 pytest-cov = "^3.0.0"
-pytest-aiohttp = "^0.3.0"
+pytest-aiohttp = "^1.0.4"
 pytest-mock = "^3.6.1"
 isort = "^5.10.1"
 types-pytz = "^2021.3.6"
