--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ issues = "https://github.com/quantmind/aio-openapi/issues"
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
 aiohttp = "^3.8.0"
-httptools = "^0.3.0"
+httptools = "^0.4.0"
 simplejson = "^3.17.5"
 asyncpg = "^0.25.0"
 SQLAlchemy = "^1.4.27"
@@ -49,8 +49,6 @@ alembic = "psycopg2-binary"
 psycopg2-binary = "^2.9.2"
 click = "^8.0.3"
 python-dateutil = "^2.8.2"
-email-validator = "^1.1.3"
-pytz = "^2022.1"
 PyYAML = "^6.0"
 uvloop = {version = "^0.16.0", optional = true}
 aiodns = {version = "^3.0.0", optional = true}
@@ -58,11 +56,13 @@ PyJWT = {version = "^2.3.0", optional = true}
 colorlog = {version = "^6.6.0", optional = true}
 phonenumbers = {version = "^8.12.37", optional = true}
 cchardet = {version = "^2.1.7", optional = true}
-Sphinx = {version = "^4.3.0", optional = true}
-sphinx-copybutton = {version = "^0.4.0", optional = true}
+Sphinx = {version = "^5.0.2", optional = true}
+sphinx-copybutton = {version = "^0.5.0", optional = true}
 sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
 aiohttp-theme = {version = "^0.1.6", optional = true}
 recommonmark = {version = "^0.7.1", optional = true}
+"backports.zoneinfo" = { version = "^0.2.1", python="<3.9" }
+email-validator = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
@@ -74,7 +74,7 @@ flake8-commas = "^2.1.0"
 codecov = "^2.1.12"
 coverage = "^6.1.2"
 coveralls = "^3.3.1"
-mypy = "^0.942"
+mypy = "^0.961"
 sqlalchemy-stubs = "^0.4"
 sentry-sdk = "^1.4.3"
 python-dotenv = "^0.20.0"
@@ -83,7 +83,6 @@ pytest-cov = "^3.0.0"
 pytest-aiohttp = "^1.0.4"
 pytest-mock = "^3.6.1"
 isort = "^5.10.1"
-types-pytz = "^2021.3.6"
 types-simplejson = "^3.17.5"
 types-python-dateutil = "^2.8.11"
 factory-boy = "^3.2.1"
