--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ warn_return_any=False
 warn_no_return=True
 
 [tool:pytest]
+asyncio_mode = auto
 testpaths = tests
 filterwarnings= default
                 ignore:::.*raven_aiohttp.*
