--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aio-openapi"
-version = "3.0.2"
+version = "3.0.3"
 description = "Minimal OpenAPI asynchronous server application"
 documentation = "https://aio-openapi.readthedocs.io"
 repository = "https://github.com/quantmind/aio-openapi"
@@ -40,12 +40,11 @@ issues = "https://github.com/quantmind/aio-openapi/issues"
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
 aiohttp = "^3.8.0"
-httptools = "^0.4.0"
+httptools = "^0.5.0"
 simplejson = "^3.17.2"
 asyncpg = "^0.26.0"
 SQLAlchemy = "^1.4.27"
 SQLAlchemy-Utils = "^0.38.2"
-alembic = "psycopg2-binary"
 psycopg2-binary = "^2.9.2"
 click = "^8.0.3"
 python-dateutil = "^2.8.2"
@@ -62,23 +61,24 @@ aiohttp-theme = {version = "^0.1.6", optional = true}
 recommonmark = {version = "^0.7.1", optional = true}
 "backports.zoneinfo" = { version = "^0.2.1", python="<3.9" }
 email-validator = "^1.2.1"
+alembic = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
 flake8 = "^5.0.4"
 pytest = "^7.1.1"
 flake8-blind-except = "^0.2.0"
-flake8-builtins = "^1.5.3"
+flake8-builtins = "^2.0.0"
 flake8-commas = "^2.1.0"
 codecov = "^2.1.12"
 coverage = "^6.1.2"
 coveralls = "^3.3.1"
-mypy = "^0.971"
+mypy = "^0.982"
 sqlalchemy-stubs = "^0.4"
 sentry-sdk = "^1.4.3"
-python-dotenv = "^0.20.0"
+python-dotenv = "^0.21.0"
 openapi-spec-validator = "^0.3.1"
-pytest-cov = "^3.0.0"
+pytest-cov = "^4.0.0"
 pytest-mock = "^3.6.1"
 isort = "^5.10.1"
 types-simplejson = "^3.17.5"
