--- a/setup.cfg
+++ b/setup.cfg
@@ -9,14 +9,6 @@ src_paths=openapi,tests
 multi_line_output=3
 include_trailing_comma=True
 
-[mypy]
-plugins = sqlmypy
-ignore_missing_imports=True
-disallow_untyped_calls=False
-warn_return_any=False
-# disallow_untyped_defs=True
-warn_no_return=True
-
 [tool:pytest]
 asyncio_mode = auto
 testpaths = tests
@@ -28,3 +20,16 @@ filterwarnings= default
                 ignore:::.*mockaioredis.*
                 ignore:This message has already been written once.*:UserWarning
                 ignore:numpy.dtype size changed, may indicate binary incompatibility:RuntimeWarning
+
+
+[mypy]
+plugins = sqlmypy
+ignore_missing_imports=True
+disallow_untyped_calls=False
+warn_return_any=False
+# disallow_untyped_defs=True
+warn_no_return=True
+
+
+[mypy-openapi.db.openapi.*]
+ignore_errors = True
