--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,33 +39,33 @@ issues = "https://github.com/quantmind/aio-openapi/issues"
 
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4"
+python = ">=3.8.1,<4"
 aiohttp = "^3.8.0"
 httptools = "^0.5.0"
 simplejson = "^3.17.2"
-asyncpg = "^0.26.0"
-SQLAlchemy = "^1.4.27"
-SQLAlchemy-Utils = "^0.38.2"
+SQLAlchemy = { version="^2.0.8", extras=["asyncio"] }
+SQLAlchemy-Utils = "^0.40.0"
 psycopg2-binary = "^2.9.2"
 click = "^8.0.3"
 python-dateutil = "^2.8.2"
 PyYAML = "^6.0"
+email-validator = "^1.2.1"
+alembic = "^1.8.1"
 aiodns = {version = "^3.0.0", optional = true}
 PyJWT = {version = "^2.3.0", optional = true}
 colorlog = {version = "^6.6.0", optional = true}
 phonenumbers = {version = "^8.12.37", optional = true}
-Sphinx = {version = "^5.0.2", optional = true}
+Sphinx = {version = "^6.1.3", optional = true}
 sphinx-copybutton = {version = "^0.5.0", optional = true}
 sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
 aiohttp-theme = {version = "^0.1.6", optional = true}
 recommonmark = {version = "^0.7.1", optional = true}
 "backports.zoneinfo" = { version = "^0.2.1", python="<3.9" }
-email-validator = "^1.2.1"
-alembic = "^1.8.1"
+asyncpg = "^0.27.0"
 
 [tool.poetry.dev-dependencies]
-black = "^22.3.0"
-flake8 = "^5.0.4"
+black = "^23.3.0"
+flake8 = "^6.0.0"
 pytest = "^7.1.1"
 flake8-blind-except = "^0.2.0"
 flake8-builtins = "^2.0.0"
@@ -73,10 +73,10 @@ flake8-commas = "^2.1.0"
 codecov = "^2.1.12"
 coverage = "^6.1.2"
 coveralls = "^3.3.1"
-mypy = "^0.982"
+mypy = "^1.1.1"
 sqlalchemy-stubs = "^0.4"
 sentry-sdk = "^1.4.3"
-python-dotenv = "^0.21.0"
+python-dotenv = "^1.0.0"
 openapi-spec-validator = "^0.3.1"
 pytest-cov = "^4.0.0"
 pytest-mock = "^3.6.1"
@@ -84,7 +84,7 @@ isort = "^5.10.1"
 types-simplejson = "^3.17.5"
 types-python-dateutil = "^2.8.11"
 factory-boy = "^3.2.1"
-pytest-asyncio = "^0.20.1"
+pytest-asyncio = "^0.21.0"
 
 [tool.poetry.extras]
 dev = ["aiodns", "PyJWT", "colorlog", "phonenumbers"]
