--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aio-openapi"
-version = "3.2.0"
+version = "3.2.1"
 description = "Minimal OpenAPI asynchronous server application"
 documentation = "https://aio-openapi.readthedocs.io"
 repository = "https://github.com/quantmind/aio-openapi"
@@ -44,37 +44,20 @@ aiohttp = "^3.8.0"
 httptools = "^0.5.0"
 simplejson = "^3.17.2"
 SQLAlchemy = { version="^2.0.8", extras=["asyncio"] }
-SQLAlchemy-Utils = "^0.40.0"
+SQLAlchemy-Utils = "^0.41.1"
 psycopg2-binary = "^2.9.2"
 click = "^8.0.3"
 python-dateutil = "^2.8.2"
 PyYAML = "^6.0"
 email-validator = "^1.2.1"
 alembic = "^1.8.1"
-aiodns = {version = "^3.0.0", optional = true}
-PyJWT = {version = "^2.3.0", optional = true}
-colorlog = {version = "^6.6.0", optional = true}
-phonenumbers = {version = "^8.12.37", optional = true}
-Sphinx = {version = "^6.1.3", optional = true}
-sphinx-copybutton = {version = "^0.5.0", optional = true}
-sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
-aiohttp-theme = {version = "^0.1.6", optional = true}
-recommonmark = {version = "^0.7.1", optional = true}
 "backports.zoneinfo" = { version = "^0.2.1", python="<3.9" }
-asyncpg = "^0.27.0"
+asyncpg = "^0.28.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
-flake8 = "^6.0.0"
 pytest = "^7.1.1"
-flake8-blind-except = "^0.2.0"
-flake8-builtins = "^2.0.0"
-flake8-commas = "^2.1.0"
-codecov = "^2.1.12"
-coverage = "^6.1.2"
-coveralls = "^3.3.1"
 mypy = "^1.1.1"
-sqlalchemy-stubs = "^0.4"
 sentry-sdk = "^1.4.3"
 python-dotenv = "^1.0.0"
 openapi-spec-validator = "^0.3.1"
@@ -85,6 +68,29 @@ types-simplejson = "^3.17.5"
 types-python-dateutil = "^2.8.11"
 factory-boy = "^3.2.1"
 pytest-asyncio = "^0.21.0"
+types-pyyaml = "^6.0.12"
+ruff = "^0.0.280"
+
+[tool.poetry.group.extras]
+optional = true
+
+[tool.poetry.group.extras.dependencies]
+aiodns = {version = "^3.0.0"}
+PyJWT = {version = "^2.3.0"}
+colorlog = {version = "^6.6.0"}
+phonenumbers = {version = "^8.12.37"}
+
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+Sphinx = {version = "^6.1.3"}
+sphinx-copybutton = {version = "^0.5.0"}
+sphinx-autodoc-typehints = {version = "^1.12.0"}
+aiohttp-theme = {version = "^0.1.6"}
+recommonmark = {version = "^0.7.1"}
+
 
 [tool.poetry.extras]
 dev = ["aiodns", "PyJWT", "colorlog", "phonenumbers"]
@@ -96,9 +102,33 @@ docs = [
     "sphinx-autodoc-typehints",
 ]
 
-[tool.poetry.group.dev.dependencies]
-types-pyyaml = "^6.0.12"
-
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = [
+    "tests"
+]
+
+[tool.isort]
+profile = "black"
+
+[tool.ruff]
+select = ["E", "F"]
+line-length = 88
+
+[tool.mypy]
+# strict = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+warn_no_return = true
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+disallow_untyped_defs = false
+
+[[tool.mypy.overrides]]
+module = "openapi.db.openapi.*"
+ignore_errors = true
